<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.null_cipher.quicklight.Settings">

    <TextView
        android:id="@+id/def_strobe_interval_desc"
        android:text="@string/default_strobe_interval_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/settings_label"/>

    <EditText
        android:id="@+id/def_strobe_interval_val"
        android:gravity="right"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/def_strobe_interval_desc"
        android:layout_alignBaseline="@id/def_strobe_interval_desc"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/def_strobe_max_desc"
        android:text="@string/default_strobe_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/def_strobe_interval_desc"
        style="@style/settings_label"/>

    <EditText
        android:id="@+id/def_strobe_max_val"
        android:gravity="right"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/def_strobe_max_desc"
        android:layout_alignBaseline="@id/def_strobe_max_desc"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/save_button"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="savePrefs"
        android:paddingTop="8dp"/>

</RelativeLayout>
